[package]
name = "exile"
version = "0.0.3"
description = "Nacent XML DOM Library"
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
categories = ["encoding", "parser-implementations", "parsing"]
edition = "2018"
exclude = ["tests/"]
keywords = ["xml"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/webern/exile/"

[dependencies]

[build-dependencies]
cargo-readme = "3.2.0"