[package]
name = "exile"
version = "0.0.9"
description = "DOM-Style XML Parser"
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
categories = ["encoding", "parser-implementations", "parsing"]
edition = "2018"
exclude = [
    ".github",
    "bin/",
    "data/",
    "target/",
    "testgen/",
    "tests/",
]
keywords = ["xml"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/webern/exile/"

[dependencies]

[build-dependencies]
cargo-readme = "3.3.1"

[features]
default = []
doctype_wip = []
