[package]
name = "exile"
description = "Nacent XML DOM Library"
version = "0.0.2"
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["xml"]
categories = ["encoding", "parsing"]
repository = "https://github.com/webern/exile/"
readme = "README.md"

[dependencies]
xdoc = { path = "../xdoc", version = "0.0.2" }

[build-dependencies]
cargo-readme = "3.2.0"
xtest = { path = "../xtest", version = "0.0.2" }

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.48"
serde_plain = "0.3.0"
xtest = { path = "../xtest", version = "0.0.2" }