[package]
name = "exile"
description = "Nacent XML DOM Library"
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
categories = ["encoding", "parser-implementations", "parsing"]
edition = "2018"
exclude = ["tests/"]
keywords = ["xml"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/webern/exile/"
version = "0.0.2"

[dependencies]
xdoc = { path = "../xdoc", version = "0.0.2" }

[build-dependencies]
cargo-readme = "3.2.0"