[package]
name = "xdoc"
description = "XML"
version = "0.0.0"
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["xml"]
categories = ["encoding", "parsing"]
repository = "https://github.com/webern/exile/"

[features]
default = []

[dependencies]
# TODO - include multiple serde dependencies in a single xdoc feature, e.g. 'json'
serde = { version = "1.0.106", optional = true, features = ["derive"] }
serde_json = { version = "1.0.48", optional = true }
