[package]
name = "xtest"
description = "XML testing library related to exile and xdoc"
version = "0.0.2"
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["xml"]
categories = ["encoding", "parsing"]
repository = "https://github.com/webern/exile/"
exclude = ["data/**/*"]
readme = "README.md"

[build-dependencies]
cargo-readme = "3.2.0"